Updated Mobile to Mobiscroll 4.7.2

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -139,9 +139,14 @@ span.disabled {
     }
   }
 
+  .mbsc-input input,
+    .mbsc-input textarea {
+      padding: 0 1em;
+    }
+
   .calendar-option {
     float: right;
-    color: #4eccc4;
+    //color: #4eccc4;
     //font-size: 1.5em;
   }
 
