#71773 - Activate a case with extended case - error

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -43,7 +43,7 @@
     };
 
     window.caseLogsParameters = {
-        caseDetailsUrl: '@Url.Action("Index", "Case")',
+        caseDetailsUrl: '@Url.Action("ExtendedCase", "Case")',
         uploadLogFileUrl: '@Url.Action("UploadLogFile", "Case")',
         getLogFilesUrl: '@Url.Action("GetLogFiles", "Case")',
         deleteLogFileUrl: '@Url.Action("DeleteLogFile")',
