#71949 - Sublevels in Selfservice menu is gone

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_CaseTemplatesMenu.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_CaseTemplatesMenu.cshtml
@@ -35,7 +35,7 @@
                             addSeparator = false;
                         }
                         <li class="dropdown-submenu">
-                            <a href="#" class="categoy">
+                            <a href="#" class="category">
                                 @group.CategoryName
                             </a>
                             <ul class="dropdown-menu">
