#71691 - Ballonchat is tricky to close

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -61,7 +61,7 @@
                         </div>
                         <br />
                         <div class="form-group col-md-10">
-                            <button id="btnSendLog" data-src="communication" class="btn btn-default">@Translation.Get("Send")</button>
+                            <a id="btnSendLog" data-src="communication" role="button" class="btn btn-default">@Translation.Get("Send")</a>
                             <i id="sendLogIndicator" style="display: none" class="gif-loader">&nbsp;</i>
                         </div>
                     </form>
