--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/case-mobile.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/case-mobile.css
@@ -1,64 +1,69 @@
-﻿   @media only screen and (max-width: 768px) {
-        input[type=text], input[type=button], button:not(.dropdown-toggle):not(.navbar-toggle), select, textarea {
-            width: 100% !important;              
-        }
+﻿@media only screen and (max-width: 768px) {
 
-        input[type=text] {
-            padding: 6px 12px;
-            line-height: 1.42857143;
-            color: #555;
-            background-color: #fff;
-            background-image: none;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            -webkit-box-shadow: input 0 1px 1px rgba (0.0.0, .075);
-            box-shadow: input 0 1px 1px rgba (0.0.0, .075);
-        }
-
-        .case-div-width90em {
-            width: 100%!important;
-        }
-
-        button[data-toggle="dropdown"] {
-            width: 40px!important;
-        }
-
-       /***** DROP DOWN SUB MENUS - OVERRIDES */
-
-       .dropdown-menu { margin-top: 32px; }
-
-       .dropdown-submenu > .dropdown-menu {
-           display: block;
-           position: relative;
-           overflow: hidden;
-           margin: 0 0 0 10px ;
-           padding: 0;
-           border: none 0;
-           box-shadow: none;
-           -webkit-border-radius:0;
-           -moz-border-radius:0;
-           border-radius:0;
-       }
-
-       #divCaseType,
-       #divCategory,
-       #divProductArea {
-           display: block !important;
-           width: 100%;       
-       }
-
-       #divBreadcrumbs_Category,
-       #divBreadcrumbs_CaseType,
-       #divBreadcrumbs_ProductArea {
-           display: block !important;
-           white-space: normal; 
-           overflow: hidden;
-           text-overflow: clip;
-           width: calc(100% - 40px);
-           max-width: calc(100% - 40px);
-       }
+    .siteCom {
+        width: 90vw;
+        max-width: 90vw;
+        margin-right: 32px;
     }
 
+    input[type=text], input[type=button], button:not(.dropdown-toggle):not(.navbar-toggle), select, textarea {
+        width: 100% !important;
+    }
 
+    input[type=text] {
+        padding: 6px 12px;
+        line-height: 1.42857143;
+        color: #555;
+        background-color: #fff;
+        background-image: none;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        -webkit-box-shadow: input 0 1px 1px rgba (0.0.0, .075);
+        box-shadow: input 0 1px 1px rgba (0.0.0, .075);
+    }
 
+    .case-div-width90em {
+        width: 100% !important;
+    }
 
+    button[data-toggle="dropdown"] {
+        width: 40px !important;
+    }
+
+    /***** DROP DOWN SUB MENUS - OVERRIDES */
+
+    .dropdown-menu {
+        margin-top: 32px;
+    }
+
+    .dropdown-submenu > .dropdown-menu {
+        display: block;
+        position: relative;
+        overflow: hidden;
+        margin: 0 0 0 10px;
+        padding: 0;
+        border: none 0;
+        box-shadow: none;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        border-radius: 0;
+    }
+
+    #divCaseType,
+    #divCategory,
+    #divProductArea {
+        display: block !important;
+        width: 100%;
+    }
+
+    #divBreadcrumbs_Category,
+    #divBreadcrumbs_CaseType,
+    #divBreadcrumbs_ProductArea {
+        display: block !important;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: clip;
+        width: calc(100% - 40px);
+        max-width: calc(100% - 40px);
+    }
+}
