#72034 - Not possible to use Ctrl+V in log note from Self Service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -166,7 +166,7 @@
              @Html.Partial("_Communication", Model.CaseLogModel)
         }
 
-        @Html.Partial("ModalDialogs/_UploadExistingLogFilePopup")
+        @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
         @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")    
     }
 }
