--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_Communication.cshtml
@@ -56,7 +56,7 @@
                                 <label>@Translation.GetForCase(GlobalEnums.TranslationCaseFields.Filename.ToString(), @SessionFacade.CurrentCustomerID)</label>
                                 <div class="form-group">
                                     <a id="btnUploadFile" href="#Log_upload_files_popup" role="button" class="btn btn-default" data-toggle="modal">@Translation.Get("Add")</a>
-                                    <a id="btnLoadFromClipboard" href="#upload_clipboard_file_popup" role="button" class="btn btn-default" data-src="log">@Translation.Get("Add from clipboard")</a>
+                                    <a id="addLogFileFromClipboard" role="button" class="btn btn-default">@Translation.Get("Add from clipboard")</a>
                                     <table id="LogFile_table" class="table com-files" style="margin-top: 10px;"></table>
                                 </div>
                             }
