--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -6,6 +6,7 @@
 @model DH.Helpdesk.SelfService.Models.Case.ExtendedCaseViewModel
 
 @{
+    var isClipboardPopupRequired = false;
     var lastErrorMessage = "";
     if (Model.Result != null)
     {
@@ -394,7 +395,7 @@
                         @if (Model.CaseId == 0)
                         {
                             <a href="#NewCase_upload_files_popup" id="" role="button" class="btn btn-default hasAttribute" data-toggle="modal" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add")</a>
-                            <a href="#upload_clipboard_file_popup" role="button" class="btn btn-default hasAttribute" data-src="case" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard")</a>
+                            <a id="addCaseFileFromClipBoard" role="button" class="btn btn-default hasAttribute" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard")</a>
                         }
                         <table id="NewCasefiles_table" class="table table-striped" style="margin-top: 10px;">
                             <tbody>
@@ -423,23 +424,8 @@
          Model.CaseId == 0 &&
          Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
     {
-        <div id="NewCase_upload_files_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h5 class="modal-title">&nbsp;</h5>
-                    </div>
-                    <div class="modal-body">
-                        <div id="NewCasefile_uploader"></div>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">@Translation.Get("Close", Enums.TranslationSource.TextTranslation)</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
+        @Html.Partial("ModalDialogs/_UploadFilePopup", "NewCase_upload_files_popup")
+        isClipboardPopupRequired = true;
     }
 </div>
 
@@ -450,7 +436,8 @@
 
 @section Scripts
 {
-    @Scripts.Render("~/Content/js/Case/extendedCase")
+    @Scripts.Render("~/Content/js/Case/extendedCase") 
+
     <script type="text/javascript">
         $(function () {
             //init extended case page js instance 
@@ -478,8 +465,8 @@
         @Html.Partial("_Communication", Model.CaseLogModel, new ViewDataDictionary(ViewData) { { "readonly", Model.CaseDataModel.IsFinished } })
         if (ViewBag.IsAttachementsAllowed)
         {
-             @Html.Partial("ModalDialogs/_UploadExistingLogFilePopup")
-             @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
+             @Html.Partial("ModalDialogs/_UploadFilePopup", "Log_upload_files_popup")
+             isClipboardPopupRequired = true;
         }
         @Scripts.Render("~/Content/js/Case/log")
     }
@@ -488,6 +475,11 @@
     {
         @Html.Partial("ModalDialogs/_CaseLogNotePopup", Model.CaseLogModel)
         @Scripts.Render("~/Content/js/Case/log")
+    }
+    
+    @if (isClipboardPopupRequired)
+    {
+        @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
     }
 }
 
