#71534 - Enable Workflow for Mobile users - removed white space at bottom on case edit

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -20,7 +20,7 @@
   </div>
 </mbsc-form>
 
-<mbsc-form [options]="formOptions" #mainForm  class="case-content">
+<div class="case-content">
 
   <!-- Case Actions -->
   <div [hidden]="currentTab != 'case_actions'">
@@ -179,4 +179,4 @@
     </div>
   </div>
   <case-menu *ngIf="isLoaded && !isLocked" [dataSource]="dataSource.workflowsStore$" (clickWorkflow)="onClickWorkflow($event)"></case-menu>
-</mbsc-form>
+</div>
