--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files-upload/case-files-upload.component.scss
@@ -9,7 +9,7 @@ input.fileupload {
     height: 0.1px;
     opacity: 0;
     overflow: hidden;
-    position: absolute;
+    //position: absolute;
     z-index: -1;  
 }
 
