#71857 - Performance - save and close - removed many lazyloadings in iterations

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -327,7 +327,7 @@ a {
         &:-webkit-autofill,
         &:-webkit-autofill:hover,
         &:-webkit-autofill:focus,
-        &t:-webkit-autofill:active {
+        &:-webkit-autofill:active {
             -webkit-transition-delay: 99999s;
             transition-delay: 99999s;
         }
