--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
@@ -1,4 +1,4 @@
-<mbsc-hamburger-nav #navMenu="mobiscroll" [options]="filterMenuOptions"  
+<mbsc-hamburger-nav [options]="filterMenuOptions"  
   [class.selected]="isFilterApplied">
   <mbsc-nav-item *ngFor="let item of menuItems; trackBy:trackByFn" 
       [id]="item.id"
