--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -1,7 +1,7 @@
 <mbsc-form class="case-overview-header">
   <div class="mbsc-form-group">
       <form [formGroup]="filtersForm" novalidate (ngSubmit)="applyFilterAndSearch()" action=".">
-              <div class="mbsc-grid mbsc-grid-sm" >
+              <div class="mbsc-grid mbsc-grid-sm">
                   <div class="mbsc-row" *ngIf="showSearchPanel">
                       <div class="mbsc-col">
                           <mbsc-input #searchInput type="search" formControlName="freeSearch" 
@@ -13,7 +13,7 @@
                   </div>
                   <div class="mbsc-row" *ngIf="!showSearchPanel">
                       <div class="mbsc-col-sm-auto nopadding">
-                          <cases-filter></cases-filter>
+                          <cases-filter (filterChanged)="processFilterChanged($event)"></cases-filter>
                       </div>
                       <div class="mbsc-col center bold">{{ headerText }}</div>
                       <div class="mbsc-col-sm-auto">
@@ -25,11 +25,11 @@
   </div>
 </mbsc-form>
 <div class="stickToBottom">
-    <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
-            <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
-                    <div class="row ellipsis">{{ (case.columns | getByKey: 'Caption') || '&nbsp;' }}</div>
-                    <div class="secondary">{{ (case.columns | getByKey: 'CaseNumber') || '&nbsp;' }} {{ (case.columns | getByKey: 'RegTime' | dateFormat) || '&nbsp;' }}</div>
-            </mbsc-listview-item>
+    <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)">
+        <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
+            <div class="row ellipsis">{{ (case.columns | getByKey: 'Caption') || '&nbsp;' }}</div>
+            <div class="secondary">{{ (case.columns | getByKey: 'CaseNumber') || '&nbsp;' }} {{ (case.columns | getByKey: 'RegTime' | dateFormat) || '&nbsp;' }}</div>
+        </mbsc-listview-item>
     </mbsc-listview>
     <mbsc-form #loading class="md-load-btn md-btn-isLoading">
             <div style="height:44px;" [hidden]="isLoading"></div>
