72706 - Add possibility to use favorite filters in case overview; Fixes and improvements.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -13,7 +13,7 @@
                   </div>
                   <div class="mbsc-row" *ngIf="!showSearchPanel">
                       <div class="mbsc-col-sm-auto nopadding">
-                          <cases-filter (filterChanged)="processFilterChanged($event)"></cases-filter>
+                          <cases-filter [initialFilterId]="stateFilterId" (filterChanged)="processFilterChanged($event)"></cases-filter>
                       </div>
                       <div class="mbsc-col center bold">{{ headerText }}</div>
                       <div class="mbsc-col-sm-auto">
