#72835- Update logic to read uploaded log files for different log types;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogFiles.cshtml
@@ -1,7 +1,5 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@using DH.Helpdesk.Common.Tools
+﻿@using DH.Helpdesk.Common.Tools
 @model DH.Helpdesk.BusinessData.Models.Case.FilesModel     
-@using System.Web.Optimization
 
 <script type="text/javascript">
     dhHelpdesk.caseLog =
