72831 - Two attachment fields: UI changes in Helpdesk; Clipboard fixes.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInputFilesAttachment.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInputFilesAttachment.cshtml
@@ -16,8 +16,8 @@
             }
             else
             {
-                <a href="#upload_logfiles_popup" class="btn logfiles_upload" role="button" data-logtype="@logNoteType">@Translation.GetCoreTextTranslation("Lägg till")</a>
-                <a href="#upload_clipboard_file_popup" class="btn logfiles_clipboard" role="button" data-logtype="@logNoteType" data-src="log">@Translation.GetCoreTextTranslation("Lägg till från Urklipp")</a>
+                <a href="#upload_logfiles_popup" class="btn uploadLogFilesBtn" role="button" data-logtype="@logNoteType">@Translation.GetCoreTextTranslation("Lägg till")</a>
+                <a href="#upload_clipboard_file_popup" class="btn uploadLogFileFromClipboardBtn" role="button" data-logtype="@logNoteType" data-src="log">@Translation.GetCoreTextTranslation("Lägg till från Urklipp")</a>
             }
         </td>
         <td>
