--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -28,6 +28,20 @@
     var translation = Translation.GetForJS("Till");
     var btnToLabel = translation.First().ToString().ToUpper() + translation.Substring(1);
 }
+
+<script type="text/javascript">
+    // _caseLogFiles params
+    dhHelpdesk.caseLog =
+    {
+        deleteLogFileConfirmMessage: '@Translation.GetForJS("Är du säker på att du vill ta bort bifogad fil")' + '?',
+        deleteCaseFileExtraInvoiceMessage: '@Translation.GetForJS("Obs! Den tas även bort från order")',
+        okText: '@Translation.GetForJS("OK")',
+        cancelText: '@Translation.GetForJS("Avbryt")',
+        yesText: '@Translation.GetForJS("Ja")',
+        noText: '@Translation.GetForJS("Nej")'
+    };
+</script>
+
 <div class="section-block">
     <h4 style="@Model.displayLogInfoHtml()">
         <a href="#" class="showbtn"><i class="icon-plus-sign"></i></a>
